--- a/modules/search/style.css
+++ b/modules/search/style.css
@@ -22,16 +22,26 @@
     outline: none;
     font-size: 16px;
     padding-left: 50px;
+    padding-right: 40px;
+    -o-text-overflow: ellipsis;
+    text-overflow:    ellipsis;
+}
+
+.delete_button {
+    position: absolute;
+    top: 17px;
+    right: 17px;
 }
 
 .find_results {
     position: absolute;
+    cursor: default;
     width: 100%;
     height: auto;
     top: 70px;
     z-index: 100;
     box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.07), 0px 0px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+    border-radius: 4px;
     background-color: white;
 }
 
@@ -40,7 +50,7 @@
     background-color: white;
     width: 100%;
     height: 70px;
-    border-radius: 10px;
+    border-radius: 4px;
 }
 
 .find_img {
@@ -81,6 +91,37 @@
     font-size: 14px;
     bottom: 20px;
     left: 80px;
+    color: #858585;
+}
+
+.find_data {
+    position: absolute;
+    -o-text-overflow: ellipsis;
+    text-overflow:    ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 30%;
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    bottom: 20px;
+    left: 80px;
+    color: #858585;
+    font-weight: 600;
+}
+
+.find_link {
+    position: absolute;
+    -o-text-overflow: ellipsis;
+    text-overflow:    ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 40%;
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    bottom: 20px;
+    left: 147px;
     color: #858585;
 }
 
