--- a/style.css
+++ b/style.css
@@ -1356,34 +1356,310 @@ footer {
 .ads-item {
   width  : 100%;
   color  : white;
-  padding: 10px;
+  padding: 16px;
 }
 
 .ads-item h6,
 .ads-item b,
 .ads-item small {
   color: white;
+  font-family: "Cera Pro Regular";
 }
 
 .ads-item>h6 {
-  font-weight: bolder;
+  font-family: "Cera Pro Bold";
 }
 
-.ads-item-first {
+/*Новостные слайдеры*/
+/*color for slides */
+.fuchsia-gradient {
   background: -webkit-linear-gradient(90deg, rgb(255, 95, 95), rgb(229, 67, 255));
   background: -moz-linear-gradient(90deg, rgb(255, 95, 95), rgb(229, 67, 255));
   background: linear-gradient(90deg, rgb(255, 95, 95), rgb(229, 67, 255));
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.ads-item-second {
+.springGreen-gradient {
   background: -webkit-linear-gradient(90deg, rgb(31, 209, 156), rgb(40, 153, 216));
   background: -moz-linear-gradient(90deg, rgb(31, 209, 156), rgb(40, 153, 216));
   background: linear-gradient(90deg, rgb(31, 209, 156), rgb(40, 153, 216));
-
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.ads-item-third {
+.blue-gradient {
   background: -webkit-linear-gradient(90deg, rgb(83, 30, 234), rgb(40, 153, 216));
   background: -moz-linear-gradient(90deg, rgb(83, 30, 234), rgb(40, 153, 216));
   background: linear-gradient(90deg, rgb(83, 30, 234), rgb(40, 153, 216));
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+
+.violet-gradient {
+  background: -webkit-linear-gradient(90deg, rgb(112, 0, 255), rgb(193, 24, 252));
+  background: -moz-linear-gradient(90deg, rgb(112, 0, 255), rgb(193, 24, 252));
+  background: linear-gradient(90deg, rgb(112, 0, 255), rgb(193, 24, 252));
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.orange-gradient {
+  background: -webkit-linear-gradient(90deg, rgb(230, 92, 0), rgb(250, 189, 35));
+  background: -moz-linear-gradient(90deg, rgb(230, 92, 0), rgb(250, 189, 35));
+  background: linear-gradient(90deg, rgb(230, 92, 0), rgb(250, 189, 35));
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.rosyBrown-gradient {
+  background: -webkit-linear-gradient(90deg, rgb(148, 113, 107), rgb(183, 152, 145));
+  background: -moz-linear-gradient(90deg, rgb(148, 113, 107), rgb(183, 152, 145));
+  background: linear-gradient(90deg, rgb(148, 113, 107), rgb(183, 152, 145));
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.fuchsia-gradient:hover {
+  transform: scale(1.03);
+}
+
+.springGreen-gradient:hover {
+  transform: scale(1.03);
+}
+
+.blue-gradient:hover {
+  transform: scale(1.03);
+}
+
+.violet-gradient:hover {
+  transform: scale(1.03);
+}
+
+.orange-gradient:hover {
+  transform: scale(1.03);
+}
+
+.rosyBrown-gradient:hover {
+  transform: scale(1.03);
+}
+/**/
+
+.content h6,
+.content b,
+.content small {
+  color: white;
+  font-family: "Cera Pro Regular";
+}
+
+.content>h6 {
+  font-family: "Cera Pro Bold";
+}
+
+#wrapper {
+  width: max-content;
+  height: 100%;
+  position: relative;
+  left: 0px;
+  transition: left .5s ease-in-out;
+  border-radius: 4px;
+}
+
+.content {
+  padding: 16px;
+  float: left;
+  width: 360px;
+  height: auto;
+  margin-right: 8px;
+  margin-left: 8px;
+  white-space: normal;
+  background-repeat: no-repeat;
+  border-radius: 4px;
+  margin-top: 10px;
+}
+
+.content:hover {
+  border-radius: 4px;
+}
+
+#contentContainer {
+  width: 1112px;
+  margin: auto;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.news_slider {
+  position: relative;
+  width: 1160px;
+  margin: auto;
+  height: auto;
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.itemLinksLeft {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  left: 5px;
+  width: 40px;
+  height: 40px;
+  border-radius: 30px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.2), 0px 0px 2px rgba(0, 0, 0, 0.3);
+  background-color: white;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.itemLinksLeft img {
+  margin-top: 12px;
+  margin-left: 13px;
+}
+
+.itemLinksRight {
+  position: absolute;
+  left: 1117px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 30px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.2), 0px 0px 2px rgba(0, 0, 0, 0.3);
+  background-color: white;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.itemLinksRight img {
+  margin-top: 11px;
+  margin-left: 15px;
+}
+
+.slider-dots {
+  text-align: center;
+  display: none;
+}
+
+.slider-dots_item{
+  cursor: pointer;
+  height: 8px;
+  width: 8px;
+  margin: 0 2px;
+  margin-top: auto;
+  margin-bottom: auto;
+  background-color: #ddd;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active1 {
+  background-color: #FF6000;
+  opacity: 80%;
+  width: 10px;
+  height: 10px;
+  margin-bottom: -1px;
+}
+
+@media (max-width: 1200px) {
+  .content {
+    width: 300px;
+    height: auto;
+  }
+
+  #contentContainer {
+    width: 936px;
+    height: 100%;
+  }
+  
+  .news_slider {
+    width: 984px;
+    margin: auto;
+    height: auto;
+  }
+
+  .itemLinksLeft {
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    left: 5px;
+  }
+
+  .itemLinksRight {
+    left: 940px;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+  }
+}
+
+@media (max-width: 1000px) {
+  .slider-dots {
+    display: block;
+  }
+
+  .content {
+    width: 440px;
+    height: auto;
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  #contentContainer {
+    width: 440px;
+    height: 100%;
+  }
+  
+  .news_slider {
+    width: 440px;
+    margin: auto;
+    height: auto;
+  }
+
+  .itemLinksLeft {
+    display: none;
+  }
+
+  .itemLinksRight {
+    display: none;
+  }
+}
+
+@media (max-width: 770px) {
+  .content {
+    width: 340px;
+    height: auto;
+    margin-right: 0;
+  }
+
+  #contentContainer {
+    width: 340px;
+    height: 100%;
+  }
+  
+  .news_slider {
+    width: 340px;
+    margin: auto;
+    height: auto;
+  }
 }
